--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -45,6 +45,7 @@
     return_content: yes
     body_format: json
     body: { "Username":"{{ admin_user }}", "Password":"{{ admin_password }}"}
+    status_code: 200, 409
   when: admin_user and admin_password is defined
 
 - name: Generate authentication token
