Feature: restart policy and labels
 - add support to define container's restart policy
 - add support to add labels to container (resolves: shelleg/ansible-role-portainer#4)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,8 @@ configure_registry: false
 remove_persistent_data: false
 remove_existing_container: false
 persistent_data_path: /opt/portainer:/data
+container_labels: {}
+container_restart_policy: always
 auth_method: 1
 
 # Portainer version
