Test setup + linting fixes (#4)
* add molecule-based test-setup
* fix: linting errors
* run tests on circle ci

--- a/tasks/admin.yml
+++ b/tasks/admin.yml
@@ -3,7 +3,7 @@
   uri:
     url: "{{ portainer_endpoint }}/users/admin/init"
     method: POST
-    return_content: yes
+    return_content: true
     body_format: json
     body: '{ "Username":"{{ admin_user }}", "Password":"{{ admin_password }}"}'
     status_code: 200, 409
