--- a/tasks/clean-up.yml
+++ b/tasks/clean-up.yml
@@ -3,8 +3,8 @@
   docker_container:
     name: portainer
     state: absent
-    purge_networks: yes
-    force_kill: yes
+    purge_networks: true
+    force_kill: true
   when: remove_existing_container
 
 - name: Remove persistent data
