--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -6,7 +6,7 @@
     labels: "{{ container_labels | default(omit) }}"
     state: started
     detach: true
-    recreate: yes
+    recreate: true
     restart_policy: "{{ container_restart_policy }}"
     published_ports:
       - "{{ host_port }}:9000"
