--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,7 +18,7 @@
   uri:
     url: "{{ portainer_endpoint }}/settings"
     method: PUT
-    return_content: yes
+    return_content: true
     headers:
       Authorization: "{{ (auth_token.content|from_json).jwt }}"
     body_format: json
