--- a/tasks/registry.yml
+++ b/tasks/registry.yml
@@ -3,7 +3,7 @@
   uri:
     url: "{{ portainer_endpoint }}/registries"
     method: POST
-    return_content: yes
+    return_content: true
     headers:
       Authorization: "{{ (auth_token.content|from_json).jwt }}"
     body_format: json
