Fix: local endpoint needs no URL (or empty)

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -15,4 +15,4 @@
     admin_user: admin
     admin_password: admin
     endpoints:
-      - {name: portainer-mgmt, url: "unix:///var/run/docker.sock"}
+      - {name: local, url: ""}
