--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -27,7 +27,7 @@ scenario:
     - create
     - prepare
     - converge
-    # - idempotence
+    - idempotence
     - side_effect
     - verify
     - destroy
