--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -9,6 +9,7 @@
     recreate: "{{ container_recreate }}"
     restart_policy: "{{ container_restart_policy }}"
     links: "{{ container_links | default(omit) }}"
+    networks: "{{ container_network | default(omit) }}"
     published_ports:
       - "{{ host_port }}:9000"
     volumes:
