Fix: Task: Remove persistent data (#13)
* Fix: Task: Remove persistent data - Should not include full docker volume path when removing volume on host.

* Fix: Task: Remove persistent data - Proper Ansible jinja yml syntax for path.

--- a/tasks/clean-up.yml
+++ b/tasks/clean-up.yml
@@ -10,5 +10,5 @@
 - name: Remove persistent data
   file:
     state: absent
-    path: "{{ persistent_data_path }}"
+    path: "{{ persistent_data_path.split(\":\") | first | string }}"
   when: remove_persistent_data
