--- a/tasks/admin.yml
+++ b/tasks/admin.yml
@@ -7,3 +7,7 @@
     body_format: json
     body: '{ "Username":"{{ admin_user }}", "Password":"{{ admin_password }}"}'
     status_code: 200, 409
+  register: _result
+  until: _result.status == 200 or _result.status == 409
+  retries: 720 # 720 * 5 seconds = 1hour (60*60/5)
+  delay: 5 # Every 5 seconds
