--- a/tasks/endpoints.yml
+++ b/tasks/endpoints.yml
@@ -21,6 +21,7 @@
       -H "Authorization: Bearer {{ (auth_token.content|from_json).jwt }}" \
       -F "Name={{ item.name }}" \
       -F "URL={{ item.url }}" \
+      -F "PublicURL={{ item.public_url }}" \
       -F "EndpointType=1"
   args:
     warn: false
