--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,8 +15,8 @@ auth_method: 1
 version: latest
 
 # Misc settings
-company_logo_url: 'url_to_company_logo'
-templates_url: 'https://raw.githubusercontent.com/portainer/templates/master/templates.json'
+company_logo_url: "url_to_company_logo"
+templates_url: "https://raw.githubusercontent.com/portainer/templates/master/templates.json"
 allow_bindmounts_users: true
 allow_privileged_users: true
 
@@ -31,21 +31,21 @@ admin_password: password
 
 # Endpoints
 endpoints:
-  - {name: local, url: ""}
-  - {name: remote1, url: "tcp://1.2.3.4:2375"}
-  - {name: remote2, url: "tcp://5.6.7.8:2375"}
+  - { name: local, url: "" }
+  - { name: remote1, url: "tcp://1.2.3.4:2375" }
+  - { name: remote2, url: "tcp://5.6.7.8:2375" }
 
 # LDAP
-ldap_account: 'uid=account_name,ou=Users,o=org,dc=mycompany,dc=com'
+ldap_account: "uid=account_name,ou=Users,o=org,dc=mycompany,dc=com"
 ldap_account_password: password
-ldap_url: 'ldap.mycompany.com'
+ldap_url: "ldap.mycompany.com"
 ldap_port: 636
 tls_enabled: true
 tls_skipverify: true
 start_tls: true
-ldap_base_dn: 'ou=Users,o=org,dc=mycompany,dc=com'
-ldap_filter: '(objectClass=inetOrgPerson)'
-ldap_username_attribute: 'uid'
+ldap_base_dn: "ou=Users,o=org,dc=mycompany,dc=com"
+ldap_filter: "(objectClass=inetOrgPerson)"
+ldap_username_attribute: "uid"
 
 # Registry
 registry_name: nexus-oss
