--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,6 +19,7 @@ company_logo_url: "url_to_company_logo"
 templates_url: "https://raw.githubusercontent.com/portainer/templates/master/templates.json"
 allow_bindmounts_users: true
 allow_privileged_users: true
+agent_secret: "mysecrettoken"
 
 # Networking
 host_port: 9000
