--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -15,6 +15,8 @@
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - "{{ persistent_data_path }}"
+    env:
+      AGENT_SECRET: "{{ agent_secret }}"
   register: portainer_docker
 
 # - name: "Debug return values from docker_container"
