--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -2,7 +2,8 @@
 - name: "Deploy Portainer to {{ inventory_hostname }}"
   docker_container:
     name: portainer
-    image: "portainer/portainer:{{ version }}"
+    image: "portainer/portainer-ce:{{ version }}"
+    container_default_behavior: no_defaults
     labels: "{{ container_labels | default(omit) }}"
     state: started
     detach: true
